# aoc2021

./: .clang-format  .gitignore  CMakeLists.txt  README.md
01/: CMakeLists.txt  day1.cpp
02/: CMakeLists.txt  day2.cpp
03/: CMakeLists.txt  day3.cpp
04/: CMakeLists.txt  day4.cpp
05/: CMakeLists.txt  day5.cpp
06/: CMakeLists.txt  day6.cpp
07/: CMakeLists.txt  day7.cpp
08/: CMakeLists.txt  day8.cpp
09/: CMakeLists.txt  day9.cpp
1/: CMakeLists.txt  day1
10/: CMakeLists.txt  day10.cpp
11/: CMakeLists.txt  day11.cpp
12/: CMakeLists.txt  day12.cpp
13/: CMakeLists.txt  day13.cpp
14/: CMakeLists.txt  day14.cpp
15/: CMakeLists.txt  day15.cpp  drawing_from_cards1.tif
16/: CMakeLists.txt  day16.cpp
2/: CMakeLists.txt  day2.cpp
5/: CMakeLists.txt
6/: CMakeLists.txt  day6.cpp
8/: day8.cpp
